mlx5: Keep polling to reclaim pages while any returned (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15949,6 +15949,7 @@
 	patches.drivers/mlx5-0021-mlx5-Remove-checksum-on-command-interface-commands.patch
 	patches.drivers/mlx5-0022-IB-mlx5-Decrease-memory-consumption-of-mr-caches.patch
 	patches.drivers/mlx5-0023-IB-mlx5-Avoid-async-events-on-invalid-port-number.patch
+	patches.drivers/mlx5-0024-mlx5-Keep-polling-to-reclaim-pages-while-any-returne.patch
 
 	########################################################
 	# Wireless Networking
