IB/mlx5: Remove dependency on X86 (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15993,6 +15993,7 @@
 	patches.drivers/mlx5-0065-IB-mlx5-Fix-binary-compatibility-with-libmlx5.patch
 	patches.drivers/mlx5-0066-IB-mlx5-Don-t-set-block-multicast-loopback-capabilit.patch
 	patches.drivers/mlx5-0067-mlx5-Add-include-of-linux-slab.h-because-of-kzalloc-.patch
+	patches.drivers/mlx5-0068-IB-mlx5-Remove-dependency-on-X86.patch
 
 	########################################################
 	# Wireless Networking
