--- a/series.conf
+++ b/series.conf
@@ -15953,6 +15953,7 @@
 	patches.drivers/mlx5-0025-mlx5-Fix-layout-of-struct-mlx5_init_seg.patch
 	patches.drivers/mlx5-0026-IB-mlx5-Disable-atomic-operations.patch
 	patches.drivers/mlx5-0027-mlx5-Fix-opt-param-mask-for-sq-err-to-rts-transition.patch
+	patches.drivers/mlx5-0028-IB-mlx5-Fix-opt-param-mask-according-to-firmware-spe.patch
 
 	########################################################
 	# Wireless Networking
