IB/mlx5: Fix RC transport send queue overhead computation (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15989,6 +15989,7 @@
 	patches.drivers/mlx5-0061-IB-mlx5-Abort-driver-cleanup-if-teardown-hca-fails.patch
 	patches.drivers/mlx5-0062-IB-mlx5-Remove-old-field-for-create-mkey-mailbox.patch
 	patches.drivers/mlx5-0063-IB-mlx5-Verify-reserved-fields-are-cleared.patch
+	patches.drivers/mlx5-0064-IB-mlx5-Fix-RC-transport-send-queue-overhead-computa.patch
 
 	########################################################
 	# Wireless Networking
