net/mlx5_core: Fix race on driver load (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16039,6 +16039,7 @@
 	patches.drivers/mlx5-0111-IB-mlx5-Use-extended-internal-signature-layout.patch
 	patches.drivers/mlx5-0112-net-mlx5_core-Call-synchronize_irq-before-freeing-EQ.patch
 	patches.drivers/mlx5-0113-net-mlx5_core-Fix-race-in-create-EQ.patch
+	patches.drivers/mlx5-0114-net-mlx5_core-Fix-race-on-driver-load.patch
 
 	########################################################
 	# Wireless Networking
