net/mlx5_core: Call synchronize_irq() before freeing EQ buffer (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16037,6 +16037,7 @@
 	patches.drivers/mlx5-0109-IB-mlx5-Modify-to-work-with-arbitrary-page-size.patch
 	patches.drivers/mlx5-0110-IB-mlx5-Use-enumerations-for-PI-copy-mask.patch
 	patches.drivers/mlx5-0111-IB-mlx5-Use-extended-internal-signature-layout.patch
+	patches.drivers/mlx5-0112-net-mlx5_core-Call-synchronize_irq-before-freeing-EQ.patch
 
 	########################################################
 	# Wireless Networking
