mlx5: Support communicating arbitrary host page size to firmware (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15964,6 +15964,7 @@
 	patches.drivers/mlx5-0036-IB-mlx5-Simplify-mlx5_ib_destroy_srq.patch
 	patches.drivers/mlx5-0037-IB-mlx5-Fix-srq-free-in-destroy-qp.patch
 	patches.drivers/mlx5-0038-mlx5-Fix-cleanup-flow-when-DMA-mapping-fails.patch
+	patches.drivers/mlx5-0039-mlx5-Support-communicating-arbitrary-host-page-size-.patch
 
 	########################################################
 	# Wireless Networking
