--- a/series.conf
+++ b/series.conf
@@ -16042,6 +16042,7 @@
 	patches.drivers/mlx5-0114-net-mlx5_core-Fix-race-on-driver-load.patch
 	patches.drivers/mlx5-0115-net-mlx5_core-Request-the-mlx5-IB-module-on-driver-l.patch
 	patches.drivers/mlx5-0116-net-mlx5_core-Fix-min-vectors-value-in-mlx5_enable_m.patch
+	patches.drivers/mlx5-0117-net-mlx5_core-Fix-command-queue-size-enforcement.patch
 
 	########################################################
 	# Wireless Networking
