--- a/series.conf
+++ b/series.conf
@@ -15937,6 +15937,7 @@
 	patches.drivers/mlx5-0009-mlx5-core-Fix-__udivdi3-when-compiling-for-32-bit-ar.patch
 	patches.drivers/mlx5-0010-mlx5-use-after-free-in-mlx5_cmd_comp_handler.patch
 	patches.drivers/mlx5-0011-mlx5-fix-error-return-code-in-mlx5_alloc_uuars.patch
+	patches.drivers/mlx5-0012-IB-mlx5-Fix-error-return-code-in-init_one.patch
 
 	########################################################
 	# Wireless Networking
