mlx5: avoid build warnings on 32-bit (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16051,6 +16051,7 @@
 	patches.drivers/mlx5-0123-mlx5-Fix-error-flow-in-add_keys.patch
 	patches.drivers/mlx5-0124-IB-mlx5-Enhance-UMR-support-to-allow-partial-page-ta.patch
 	patches.drivers/mlx5-0125-mlx5_core-Re-add-MLX5_DEV_CAP_FLAG_ON_DMND_PG-flag.patch
+	patches.drivers/mlx5-0126-mlx5-avoid-build-warnings-on-32-bit.patch
 
 	########################################################
 	# Wireless Networking
