IB/mlx5: Use extended internal signature layout (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16036,6 +16036,7 @@
 	patches.drivers/mlx5-0108-IB-mlx5-Remove-duplicate-code-from-mlx5_set_path.patch
 	patches.drivers/mlx5-0109-IB-mlx5-Modify-to-work-with-arbitrary-page-size.patch
 	patches.drivers/mlx5-0110-IB-mlx5-Use-enumerations-for-PI-copy-mask.patch
+	patches.drivers/mlx5-0111-IB-mlx5-Use-extended-internal-signature-layout.patch
 
 	########################################################
 	# Wireless Networking
