mlx5_core: Fixes for sparse warnings (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15931,6 +15931,7 @@
 	patches.drivers/mlx5-0003-mlx5-Add-driver-for-Mellanox-Connect-IB-adapters.patch
 	patches.drivers/mlx5-0004-mlx5-Fix-parameter-type-of-health_handler_t.patch
 	patches.drivers/mlx5-0005-IB-mlx5-Make-profile-static-in-main.c.patch
+	patches.drivers/mlx5-0006-mlx5_core-Fixes-for-sparse-warnings.patch
 
 	########################################################
 	# Wireless Networking
