--- a/series.conf
+++ b/series.conf
@@ -16008,6 +16008,7 @@
 	patches.drivers/mlx5-0080-IB-mlx5-Expose-support-for-signature-MR-feature.patch
 	patches.drivers/mlx5-0081-IB-mlx5_core-remove-unreachable-function-call-in-mod.patch
 	patches.drivers/mlx5-0082-IB-mlx5-Add-block-multicast-loopback-support.patch
+	patches.drivers/mlx5-0083-mlx5_core-Fix-signature-handover-operation-for-inter.patch
 
 	########################################################
 	# Wireless Networking
