IB/mlx5: Enhance UMR support to allow partial page table update (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16049,6 +16049,7 @@
 	patches.drivers/mlx5-0121-net-mlx5_core-Add-more-supported-devices.patch
 	patches.drivers/mlx5-0122-mlx5-Fix-sparse-warnings.patch
 	patches.drivers/mlx5-0123-mlx5-Fix-error-flow-in-add_keys.patch
+	patches.drivers/mlx5-0124-IB-mlx5-Enhance-UMR-support-to-allow-partial-page-ta.patch
 
 	########################################################
 	# Wireless Networking
