--- a/series.conf
+++ b/series.conf
@@ -16022,6 +16022,7 @@
 	patches.drivers/mlx5-0094-mlx5_core-Fix-possible-race-between-mr-tree-insert-d.patch
 	patches.drivers/mlx5-0095-IB-mlx5-Enable-block-multicast-loopback-for-kernel-c.patch
 	patches.drivers/mlx5-0096-mlx5-Move-pci-device-handling-from-mlx5_ib-to-mlx5_c.patch
+	patches.drivers/mlx5-0097-mlx5-minor-fixes-mainly-avoidance-of-hidden-casts.patch
 
 	########################################################
 	# Wireless Networking
