--- a/series.conf
+++ b/series.conf
@@ -16005,6 +16005,7 @@
 	patches.drivers/mlx5-0077-IB-mlx5-Keep-mlx5-MRs-in-a-radix-tree-under-device.patch
 	patches.drivers/mlx5-0078-IB-mlx5-Support-IB_WR_REG_SIG_MR.patch
 	patches.drivers/mlx5-0079-IB-mlx5-Collect-signature-error-completion.patch
+	patches.drivers/mlx5-0080-IB-mlx5-Expose-support-for-signature-MR-feature.patch
 
 	########################################################
 	# Wireless Networking
