mlx5: Clear reserved area in set_hca_cap() (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15965,6 +15965,7 @@
 	patches.drivers/mlx5-0037-IB-mlx5-Fix-srq-free-in-destroy-qp.patch
 	patches.drivers/mlx5-0038-mlx5-Fix-cleanup-flow-when-DMA-mapping-fails.patch
 	patches.drivers/mlx5-0039-mlx5-Support-communicating-arbitrary-host-page-size-.patch
+	patches.drivers/mlx5-0040-mlx5-Clear-reserved-area-in-set_hca_cap.patch
 
 	########################################################
 	# Wireless Networking
