--- a/series.conf
+++ b/series.conf
@@ -15944,6 +15944,7 @@
 	patches.drivers/mlx5-0016-net-mlx5_core-Support-MANAGE_PAGES-and-QUERY_PAGES-f.patch
 	patches.drivers/mlx5-0017-mlx5-remove-unused-MLX5_DEBUG-param-in-Kconfig.patch
 	patches.drivers/mlx5-0018-IB-mlx5-Fix-send-work-queue-size-calculation.patch
+	patches.drivers/mlx5-0019-IB-mlx5-Flush-cache-workqueue-before-destroying-it.patch
 
 	########################################################
 	# Wireless Networking
