--- a/series.conf
+++ b/series.conf
@@ -16043,6 +16043,7 @@
 	patches.drivers/mlx5-0115-net-mlx5_core-Request-the-mlx5-IB-module-on-driver-l.patch
 	patches.drivers/mlx5-0116-net-mlx5_core-Fix-min-vectors-value-in-mlx5_enable_m.patch
 	patches.drivers/mlx5-0117-net-mlx5_core-Fix-command-queue-size-enforcement.patch
+	patches.drivers/mlx5-0118-net-mlx5_core-Remove-unused-dev-cap-enum-fields.patch
 
 	########################################################
 	# Wireless Networking
