net/mlx5_core: use set/get macros in device caps (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16027,6 +16027,7 @@
 	patches.drivers/mlx5-0099-IB-mlx5-Use-ARRAY_SIZE-instead-of-sizeof-sizeof-0.patch
 	patches.drivers/mlx5-0100-net-mlx5_core-Update-device-capabilities-handling.patch
 	patches.drivers/mlx5-0101-net-mlx5_core-Use-hardware-registers-description-hea.patch
+	patches.drivers/mlx5-0102-net-mlx5_core-use-set-get-macros-in-device-caps.patch
 
 	########################################################
 	# Wireless Networking
