--- a/series.conf
+++ b/series.conf
@@ -16038,6 +16038,7 @@
 	patches.drivers/mlx5-0110-IB-mlx5-Use-enumerations-for-PI-copy-mask.patch
 	patches.drivers/mlx5-0111-IB-mlx5-Use-extended-internal-signature-layout.patch
 	patches.drivers/mlx5-0112-net-mlx5_core-Call-synchronize_irq-before-freeing-EQ.patch
+	patches.drivers/mlx5-0113-net-mlx5_core-Fix-race-in-create-EQ.patch
 
 	########################################################
 	# Wireless Networking
