net/mlx5_core: Update device capabilities handling (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16025,6 +16025,7 @@
 	patches.drivers/mlx5-0097-mlx5-minor-fixes-mainly-avoidance-of-hidden-casts.patch
 	patches.drivers/mlx5-0098-mlx5-Adjust-events-to-use-unsigned-long-param-instea.patch
 	patches.drivers/mlx5-0099-IB-mlx5-Use-ARRAY_SIZE-instead-of-sizeof-sizeof-0.patch
+	patches.drivers/mlx5-0100-net-mlx5_core-Update-device-capabilities-handling.patch
 
 	########################################################
 	# Wireless Networking
