mlx5: Remove checksum on command interface commands (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15946,6 +15946,7 @@
 	patches.drivers/mlx5-0018-IB-mlx5-Fix-send-work-queue-size-calculation.patch
 	patches.drivers/mlx5-0019-IB-mlx5-Flush-cache-workqueue-before-destroying-it.patch
 	patches.drivers/mlx5-0020-IB-mlx5-Fix-memory-leak-in-mlx5_ib_create_srq.patch
+	patches.drivers/mlx5-0021-mlx5-Remove-checksum-on-command-interface-commands.patch
 
 	########################################################
 	# Wireless Networking
