--- a/series.conf
+++ b/series.conf
@@ -15992,6 +15992,7 @@
 	patches.drivers/mlx5-0064-IB-mlx5-Fix-RC-transport-send-queue-overhead-computa.patch
 	patches.drivers/mlx5-0065-IB-mlx5-Fix-binary-compatibility-with-libmlx5.patch
 	patches.drivers/mlx5-0066-IB-mlx5-Don-t-set-block-multicast-loopback-capabilit.patch
+	patches.drivers/mlx5-0067-mlx5-Add-include-of-linux-slab.h-because-of-kzalloc-.patch
 
 	########################################################
 	# Wireless Networking
