IB/mlx5: Enable "block multicast loopback" for kernel consumers (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16020,6 +16020,7 @@
 	patches.drivers/mlx5-0092-IB-mlx5-add-missing-padding-at-end-of-struct-mlx5_ib.patch
 	patches.drivers/mlx5-0093-IB-mlx5-Fix-warning-about-cast-of-wr_id-back-to-poin.patch
 	patches.drivers/mlx5-0094-mlx5_core-Fix-possible-race-between-mr-tree-insert-d.patch
+	patches.drivers/mlx5-0095-IB-mlx5-Enable-block-multicast-loopback-for-kernel-c.patch
 
 	########################################################
 	# Wireless Networking
