IB/mlx5_core: remove unreachable function call in module init (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16006,6 +16006,7 @@
 	patches.drivers/mlx5-0078-IB-mlx5-Support-IB_WR_REG_SIG_MR.patch
 	patches.drivers/mlx5-0079-IB-mlx5-Collect-signature-error-completion.patch
 	patches.drivers/mlx5-0080-IB-mlx5-Expose-support-for-signature-MR-feature.patch
+	patches.drivers/mlx5-0081-IB-mlx5_core-remove-unreachable-function-call-in-mod.patch
 
 	########################################################
 	# Wireless Networking
