net/mlx5_core: Request the mlx5 IB module on driver load (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16040,6 +16040,7 @@
 	patches.drivers/mlx5-0112-net-mlx5_core-Call-synchronize_irq-before-freeing-EQ.patch
 	patches.drivers/mlx5-0113-net-mlx5_core-Fix-race-in-create-EQ.patch
 	patches.drivers/mlx5-0114-net-mlx5_core-Fix-race-on-driver-load.patch
+	patches.drivers/mlx5-0115-net-mlx5_core-Request-the-mlx5-IB-module-on-driver-l.patch
 
 	########################################################
 	# Wireless Networking
