IB/mlx5: Make sure doorbell record is visible before doorbell (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15980,6 +15980,7 @@
 	patches.drivers/mlx5-0052-mlx5_core-Fix-out-arg-size-in-access_register-comman.patch
 	patches.drivers/mlx5-0053-IB-mlx5-Clear-out-struct-before-create-QP-command.patch
 	patches.drivers/mlx5-0054-mlx5_core-Use-mlx5-core-style-warning.patch
+	patches.drivers/mlx5-0055-IB-mlx5-Make-sure-doorbell-record-is-visible-before-.patch
 
 	########################################################
 	# Wireless Networking
