net/mlx5_core: Add more supported devices (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16046,6 +16046,7 @@
 	patches.drivers/mlx5-0118-net-mlx5_core-Remove-unused-dev-cap-enum-fields.patch
 	patches.drivers/mlx5-0119-net-mlx5_core-Print-resource-number-on-QP-SRQ-async-.patch
 	patches.drivers/mlx5-0120-net-mlx5_core-Clear-outbox-of-dealloc-uar.patch
+	patches.drivers/mlx5-0121-net-mlx5_core-Add-more-supported-devices.patch
 
 	########################################################
 	# Wireless Networking
