mlx5_core: Adjust hca_cap.uar_page_sz to conform to Connect-IB spec (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15932,6 +15932,7 @@
 	patches.drivers/mlx5-0004-mlx5-Fix-parameter-type-of-health_handler_t.patch
 	patches.drivers/mlx5-0005-IB-mlx5-Make-profile-static-in-main.c.patch
 	patches.drivers/mlx5-0006-mlx5_core-Fixes-for-sparse-warnings.patch
+	patches.drivers/mlx5-0007-mlx5_core-Adjust-hca_cap.uar_page_sz-to-conform-to-C.patch
 
 	########################################################
 	# Wireless Networking
