--- a/series.conf
+++ b/series.conf
@@ -15956,6 +15956,7 @@
 	patches.drivers/mlx5-0028-IB-mlx5-Fix-opt-param-mask-according-to-firmware-spe.patch
 	patches.drivers/mlx5-0029-mlx5-Fix-error-code-translation-from-firmware-to-dri.patch
 	patches.drivers/mlx5-0030-IB-mlx5-Fix-eq-names-to-display-nicely-in-proc-inter.patch
+	patches.drivers/mlx5-0031-IB-mlx5-Fix-alignment-of-reg-umr-gather-buffers.patch
 
 	########################################################
 	# Wireless Networking
