mlx5: Use enum to indicate adapter page size (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15970,6 +15970,7 @@
 	patches.drivers/mlx5-0042-IB-mlx5-Remove-dead-code-in-mr.c.patch
 	patches.drivers/mlx5-0043-IB-mlx5-Remove-Always-false-comparison.patch
 	patches.drivers/mlx5-0044-IB-mlx5-Update-opt-param-mask-for-RTS2RTS.patch
+	patches.drivers/mlx5-0045-mlx5-Use-enum-to-indicate-adapter-page-size.patch
 
 	########################################################
 	# Wireless Networking
