IB/mlx5: Fix micro UAR allocator (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15976,6 +15976,7 @@
 	patches.drivers/mlx5-0048-IB-mlx5-Fix-page-shift-in-create-CQ-for-userspace.patch
 	patches.drivers/mlx5-0049-IB-mlx5-Remove-unused-code-in-mr.c.patch
 	patches.drivers/mlx5-0050-mlx5_core-Remove-dead-code.patch
+	patches.drivers/mlx5-0051-IB-mlx5-Fix-micro-UAR-allocator.patch
 
 	########################################################
 	# Wireless Networking
