--- a/series.conf
+++ b/series.conf
@@ -15967,6 +15967,7 @@
 	patches.drivers/mlx5-0039-mlx5-Support-communicating-arbitrary-host-page-size-.patch
 	patches.drivers/mlx5-0040-mlx5-Clear-reserved-area-in-set_hca_cap.patch
 	patches.drivers/mlx5-0041-mlx5_core-Change-optimal_reclaimed_pages-for-better-.patch
+	patches.drivers/mlx5-0042-IB-mlx5-Remove-dead-code-in-mr.c.patch
 
 	########################################################
 	# Wireless Networking
