--- a/series.conf
+++ b/series.conf
@@ -15983,6 +15983,7 @@
 	patches.drivers/mlx5-0055-IB-mlx5-Make-sure-doorbell-record-is-visible-before-.patch
 	patches.drivers/mlx5-0056-IB-mlx5-Implement-modify-CQ.patch
 	patches.drivers/mlx5-0057-IB-mlx5-Add-support-for-resize-CQ.patch
+	patches.drivers/mlx5-0058-mlx5_core-Improve-debugfs-readability.patch
 
 	########################################################
 	# Wireless Networking
