--- a/series.conf
+++ b/series.conf
@@ -16000,6 +16000,7 @@
 	patches.drivers/mlx5-0072-IB-core-Introduce-signature-verbs-API.patch
 	patches.drivers/mlx5-0073-mlx5-Implement-create_mr-and-destroy_mr.patch
 	patches.drivers/mlx5-0074-IB-mlx5-Initialize-mlx5_ib_qp-signature-related-memb.patch
+	patches.drivers/mlx5-0075-IB-mlx5-Break-up-wqe-handling-into-begin-finish-rout.patch
 
 	########################################################
 	# Wireless Networking
