IB/mlx5: Fix eq names to display nicely in /proc/interrupts (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15955,6 +15955,7 @@
 	patches.drivers/mlx5-0027-mlx5-Fix-opt-param-mask-for-sq-err-to-rts-transition.patch
 	patches.drivers/mlx5-0028-IB-mlx5-Fix-opt-param-mask-according-to-firmware-spe.patch
 	patches.drivers/mlx5-0029-mlx5-Fix-error-code-translation-from-firmware-to-dri.patch
+	patches.drivers/mlx5-0030-IB-mlx5-Fix-eq-names-to-display-nicely-in-proc-inter.patch
 
 	########################################################
 	# Wireless Networking
