--- a/series.conf
+++ b/series.conf
@@ -16052,6 +16052,7 @@
 	patches.drivers/mlx5-0124-IB-mlx5-Enhance-UMR-support-to-allow-partial-page-ta.patch
 	patches.drivers/mlx5-0125-mlx5_core-Re-add-MLX5_DEV_CAP_FLAG_ON_DMND_PG-flag.patch
 	patches.drivers/mlx5-0126-mlx5-avoid-build-warnings-on-32-bit.patch
+	patches.drivers/mlx5-0127-infiniband-mlx5-avoid-a-compile-time-warning.patch
 
 	########################################################
 	# Wireless Networking
