mlx5: Move pci device handling from mlx5_ib to mlx5_core (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16021,6 +16021,7 @@
 	patches.drivers/mlx5-0093-IB-mlx5-Fix-warning-about-cast-of-wr_id-back-to-poin.patch
 	patches.drivers/mlx5-0094-mlx5_core-Fix-possible-race-between-mr-tree-insert-d.patch
 	patches.drivers/mlx5-0095-IB-mlx5-Enable-block-multicast-loopback-for-kernel-c.patch
+	patches.drivers/mlx5-0096-mlx5-Move-pci-device-handling-from-mlx5_ib-to-mlx5_c.patch
 
 	########################################################
 	# Wireless Networking
