IB/mlx5: Remove duplicate code from mlx5_set_path (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16033,6 +16033,7 @@
 	patches.drivers/mlx5-0105-IB-mlx5-Clear-umr-resources-after-ib_unregister_devi.patch
 	patches.drivers/mlx5-0106-IB-mlx5-Improve-debug-prints-in-mlx5_ib_reg_user_mr.patch
 	patches.drivers/mlx5-0107-IB-mlx5-Fix-possible-array-overflow.patch
+	patches.drivers/mlx5-0108-IB-mlx5-Remove-duplicate-code-from-mlx5_set_path.patch
 
 	########################################################
 	# Wireless Networking
