net/mlx5_core: Fix min vectors value in mlx5_enable_msix (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16041,6 +16041,7 @@
 	patches.drivers/mlx5-0113-net-mlx5_core-Fix-race-in-create-EQ.patch
 	patches.drivers/mlx5-0114-net-mlx5_core-Fix-race-on-driver-load.patch
 	patches.drivers/mlx5-0115-net-mlx5_core-Request-the-mlx5-IB-module-on-driver-l.patch
+	patches.drivers/mlx5-0116-net-mlx5_core-Fix-min-vectors-value-in-mlx5_enable_m.patch
 
 	########################################################
 	# Wireless Networking
