IB/mlx5: Fix error handling in reg_umr (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16011,6 +16011,7 @@
 	patches.drivers/mlx5-0083-mlx5_core-Fix-signature-handover-operation-for-inter.patch
 	patches.drivers/mlx5-0084-mlx5_core-Simplify-signature-handover-wqe-for-interl.patch
 	patches.drivers/mlx5-0085-mlx5_core-Copy-DIF-fields-only-when-input-and-output.patch
+	patches.drivers/mlx5-0086-IB-mlx5-Fix-error-handling-in-reg_umr.patch
 
 	########################################################
 	# Wireless Networking
