mlx5: Fix opt param mask for sq err to rts transition (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15952,6 +15952,7 @@
 	patches.drivers/mlx5-0024-mlx5-Keep-polling-to-reclaim-pages-while-any-returne.patch
 	patches.drivers/mlx5-0025-mlx5-Fix-layout-of-struct-mlx5_init_seg.patch
 	patches.drivers/mlx5-0026-IB-mlx5-Disable-atomic-operations.patch
+	patches.drivers/mlx5-0027-mlx5-Fix-opt-param-mask-for-sq-err-to-rts-transition.patch
 
 	########################################################
 	# Wireless Networking
