--- a/series.conf
+++ b/series.conf
@@ -15930,6 +15930,7 @@
 	patches.drivers/mlx5-0002-module.h-split-out-the-EXPORT_SYMBOL-into-export.h.patch
 	patches.drivers/mlx5-0003-mlx5-Add-driver-for-Mellanox-Connect-IB-adapters.patch
 	patches.drivers/mlx5-0004-mlx5-Fix-parameter-type-of-health_handler_t.patch
+	patches.drivers/mlx5-0005-IB-mlx5-Make-profile-static-in-main.c.patch
 
 	########################################################
 	# Wireless Networking
