--- a/series.conf
+++ b/series.conf
@@ -15996,6 +15996,7 @@
 	patches.drivers/mlx5-0068-IB-mlx5-Remove-dependency-on-X86.patch
 	patches.drivers/mlx5-0069-mlx5-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/mlx5-0070-net-IB-mlx-Bump-all-Mellanox-driver-versions.patch
+	patches.drivers/mlx5-0071-IB-core-Introduce-protected-memory-regions.patch
 
 	########################################################
 	# Wireless Networking
