IB/mlx5: Remove "Always false" comparison (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15968,6 +15968,7 @@
 	patches.drivers/mlx5-0040-mlx5-Clear-reserved-area-in-set_hca_cap.patch
 	patches.drivers/mlx5-0041-mlx5_core-Change-optimal_reclaimed_pages-for-better-.patch
 	patches.drivers/mlx5-0042-IB-mlx5-Remove-dead-code-in-mr.c.patch
+	patches.drivers/mlx5-0043-IB-mlx5-Remove-Always-false-comparison.patch
 
 	########################################################
 	# Wireless Networking
