mlx5: Return -EFAULT instead of -EPERM (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15933,6 +15933,7 @@
 	patches.drivers/mlx5-0005-IB-mlx5-Make-profile-static-in-main.c.patch
 	patches.drivers/mlx5-0006-mlx5_core-Fixes-for-sparse-warnings.patch
 	patches.drivers/mlx5-0007-mlx5_core-Adjust-hca_cap.uar_page_sz-to-conform-to-C.patch
+	patches.drivers/mlx5-0008-mlx5-Return-EFAULT-instead-of-EPERM.patch
 
 	########################################################
 	# Wireless Networking
