IB/mlx5: Support IB_WR_REG_SIG_MR (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16003,6 +16003,7 @@
 	patches.drivers/mlx5-0075-IB-mlx5-Break-up-wqe-handling-into-begin-finish-rout.patch
 	patches.drivers/mlx5-0076-IB-mlx5-Remove-MTT-access-mode-from-umr-flags-helper.patch
 	patches.drivers/mlx5-0077-IB-mlx5-Keep-mlx5-MRs-in-a-radix-tree-under-device.patch
+	patches.drivers/mlx5-0078-IB-mlx5-Support-IB_WR_REG_SIG_MR.patch
 
 	########################################################
 	# Wireless Networking
