mlx5_core: Implement new initialization sequence (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15939,6 +15939,7 @@
 	patches.drivers/mlx5-0011-mlx5-fix-error-return-code-in-mlx5_alloc_uuars.patch
 	patches.drivers/mlx5-0012-IB-mlx5-Fix-error-return-code-in-init_one.patch
 	patches.drivers/mlx5-0013-IB-mlx5-Fix-stack-info-leak-in-mlx5_ib_alloc_ucontex.patch
+	patches.drivers/mlx5-0014-mlx5_core-Implement-new-initialization-sequence.patch
 
 	########################################################
 	# Wireless Networking
