--- a/series.conf
+++ b/series.conf
@@ -16001,6 +16001,7 @@
 	patches.drivers/mlx5-0073-mlx5-Implement-create_mr-and-destroy_mr.patch
 	patches.drivers/mlx5-0074-IB-mlx5-Initialize-mlx5_ib_qp-signature-related-memb.patch
 	patches.drivers/mlx5-0075-IB-mlx5-Break-up-wqe-handling-into-begin-finish-rout.patch
+	patches.drivers/mlx5-0076-IB-mlx5-Remove-MTT-access-mode-from-umr-flags-helper.patch
 
 	########################################################
 	# Wireless Networking
