mlx5: Fix layout of struct mlx5_init_seg (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15950,6 +15950,7 @@
 	patches.drivers/mlx5-0022-IB-mlx5-Decrease-memory-consumption-of-mr-caches.patch
 	patches.drivers/mlx5-0023-IB-mlx5-Avoid-async-events-on-invalid-port-number.patch
 	patches.drivers/mlx5-0024-mlx5-Keep-polling-to-reclaim-pages-while-any-returne.patch
+	patches.drivers/mlx5-0025-mlx5-Fix-layout-of-struct-mlx5_init_seg.patch
 
 	########################################################
 	# Wireless Networking
