mlx5_core: Change optimal_reclaimed_pages for better performance (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15966,6 +15966,7 @@
 	patches.drivers/mlx5-0038-mlx5-Fix-cleanup-flow-when-DMA-mapping-fails.patch
 	patches.drivers/mlx5-0039-mlx5-Support-communicating-arbitrary-host-page-size-.patch
 	patches.drivers/mlx5-0040-mlx5-Clear-reserved-area-in-set_hca_cap.patch
+	patches.drivers/mlx5-0041-mlx5_core-Change-optimal_reclaimed_pages-for-better-.patch
 
 	########################################################
 	# Wireless Networking
