mlx5_core: Simplify signature handover wqe for interleaved buffers (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16009,6 +16009,7 @@
 	patches.drivers/mlx5-0081-IB-mlx5_core-remove-unreachable-function-call-in-mod.patch
 	patches.drivers/mlx5-0082-IB-mlx5-Add-block-multicast-loopback-support.patch
 	patches.drivers/mlx5-0083-mlx5_core-Fix-signature-handover-operation-for-inter.patch
+	patches.drivers/mlx5-0084-mlx5_core-Simplify-signature-handover-wqe-for-interl.patch
 
 	########################################################
 	# Wireless Networking
