--- a/series.conf
+++ b/series.conf
@@ -15994,6 +15994,7 @@
 	patches.drivers/mlx5-0066-IB-mlx5-Don-t-set-block-multicast-loopback-capabilit.patch
 	patches.drivers/mlx5-0067-mlx5-Add-include-of-linux-slab.h-because-of-kzalloc-.patch
 	patches.drivers/mlx5-0068-IB-mlx5-Remove-dependency-on-X86.patch
+	patches.drivers/mlx5-0069-mlx5-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 
 	########################################################
 	# Wireless Networking
