IB/mlx5: Ensure proper synchronization accessing memory (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15957,6 +15957,7 @@
 	patches.drivers/mlx5-0029-mlx5-Fix-error-code-translation-from-firmware-to-dri.patch
 	patches.drivers/mlx5-0030-IB-mlx5-Fix-eq-names-to-display-nicely-in-proc-inter.patch
 	patches.drivers/mlx5-0031-IB-mlx5-Fix-alignment-of-reg-umr-gather-buffers.patch
+	patches.drivers/mlx5-0032-IB-mlx5-Ensure-proper-synchronization-accessing-memo.patch
 
 	########################################################
 	# Wireless Networking
