IB/mlx5: Fix page shift in create CQ for userspace (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15973,6 +15973,7 @@
 	patches.drivers/mlx5-0045-mlx5-Use-enum-to-indicate-adapter-page-size.patch
 	patches.drivers/mlx5-0046-IB-mlx5-Remove-dead-code.patch
 	patches.drivers/mlx5-0047-IB-mlx5-Fix-list_del-of-empty-list.patch
+	patches.drivers/mlx5-0048-IB-mlx5-Fix-page-shift-in-create-CQ-for-userspace.patch
 
 	########################################################
 	# Wireless Networking
