--- a/series.conf
+++ b/series.conf
@@ -15938,6 +15938,7 @@
 	patches.drivers/mlx5-0010-mlx5-use-after-free-in-mlx5_cmd_comp_handler.patch
 	patches.drivers/mlx5-0011-mlx5-fix-error-return-code-in-mlx5_alloc_uuars.patch
 	patches.drivers/mlx5-0012-IB-mlx5-Fix-error-return-code-in-init_one.patch
+	patches.drivers/mlx5-0013-IB-mlx5-Fix-stack-info-leak-in-mlx5_ib_alloc_ucontex.patch
 
 	########################################################
 	# Wireless Networking
