IB/mlx5: Initialize mlx5_ib_qp signature-related members (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15999,6 +15999,7 @@
 	patches.drivers/mlx5-0071-IB-core-Introduce-protected-memory-regions.patch
 	patches.drivers/mlx5-0072-IB-core-Introduce-signature-verbs-API.patch
 	patches.drivers/mlx5-0073-mlx5-Implement-create_mr-and-destroy_mr.patch
+	patches.drivers/mlx5-0074-IB-mlx5-Initialize-mlx5_ib_qp-signature-related-memb.patch
 
 	########################################################
 	# Wireless Networking
