IB/mlx5: Clear umr resources after ib_unregister_device (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16030,6 +16030,7 @@
 	patches.drivers/mlx5-0102-net-mlx5_core-use-set-get-macros-in-device-caps.patch
 	patches.drivers/mlx5-0103-net-mlx5_core-Identify-resources-by-their-type.patch
 	patches.drivers/mlx5-0104-net-mlx5_core-Add-ConnectX-4-to-list-of-supported-de.patch
+	patches.drivers/mlx5-0105-IB-mlx5-Clear-umr-resources-after-ib_unregister_devi.patch
 
 	########################################################
 	# Wireless Networking
