--- a/series.conf
+++ b/series.conf
@@ -16032,6 +16032,7 @@
 	patches.drivers/mlx5-0104-net-mlx5_core-Add-ConnectX-4-to-list-of-supported-de.patch
 	patches.drivers/mlx5-0105-IB-mlx5-Clear-umr-resources-after-ib_unregister_devi.patch
 	patches.drivers/mlx5-0106-IB-mlx5-Improve-debug-prints-in-mlx5_ib_reg_user_mr.patch
+	patches.drivers/mlx5-0107-IB-mlx5-Fix-possible-array-overflow.patch
 
 	########################################################
 	# Wireless Networking
