--- a/series.conf
+++ b/series.conf
@@ -15991,6 +15991,7 @@
 	patches.drivers/mlx5-0063-IB-mlx5-Verify-reserved-fields-are-cleared.patch
 	patches.drivers/mlx5-0064-IB-mlx5-Fix-RC-transport-send-queue-overhead-computa.patch
 	patches.drivers/mlx5-0065-IB-mlx5-Fix-binary-compatibility-with-libmlx5.patch
+	patches.drivers/mlx5-0066-IB-mlx5-Don-t-set-block-multicast-loopback-capabilit.patch
 
 	########################################################
 	# Wireless Networking
