--- a/series.conf
+++ b/series.conf
@@ -15979,6 +15979,7 @@
 	patches.drivers/mlx5-0051-IB-mlx5-Fix-micro-UAR-allocator.patch
 	patches.drivers/mlx5-0052-mlx5_core-Fix-out-arg-size-in-access_register-comman.patch
 	patches.drivers/mlx5-0053-IB-mlx5-Clear-out-struct-before-create-QP-command.patch
+	patches.drivers/mlx5-0054-mlx5_core-Use-mlx5-core-style-warning.patch
 
 	########################################################
 	# Wireless Networking
