IB/mlx5: Set QP offsets and parameters for user QPs and not just for kernel QPs (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16014,6 +16014,7 @@
 	patches.drivers/mlx5-0086-IB-mlx5-Fix-error-handling-in-reg_umr.patch
 	patches.drivers/mlx5-0087-IB-mlx5-Add-MR-to-radix-tree-in-reg_mr_callback.patch
 	patches.drivers/mlx5-0088-mlx5_core-Store-MR-attributes-in-mlx5_mr_core-during.patch
+	patches.drivers/mlx5-0089-IB-mlx5-Set-QP-offsets-and-parameters-for-user-QPs-a.patch
 
 	########################################################
 	# Wireless Networking
