IB/mlx5: Clear out struct before create QP command (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15978,6 +15978,7 @@
 	patches.drivers/mlx5-0050-mlx5_core-Remove-dead-code.patch
 	patches.drivers/mlx5-0051-IB-mlx5-Fix-micro-UAR-allocator.patch
 	patches.drivers/mlx5-0052-mlx5_core-Fix-out-arg-size-in-access_register-comman.patch
+	patches.drivers/mlx5-0053-IB-mlx5-Clear-out-struct-before-create-QP-command.patch
 
 	########################################################
 	# Wireless Networking
