net/mlx5_core: Identify resources by their type (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16028,6 +16028,7 @@
 	patches.drivers/mlx5-0100-net-mlx5_core-Update-device-capabilities-handling.patch
 	patches.drivers/mlx5-0101-net-mlx5_core-Use-hardware-registers-description-hea.patch
 	patches.drivers/mlx5-0102-net-mlx5_core-use-set-get-macros-in-device-caps.patch
+	patches.drivers/mlx5-0103-net-mlx5_core-Identify-resources-by-their-type.patch
 
 	########################################################
 	# Wireless Networking
