--- a/series.conf
+++ b/series.conf
@@ -15985,6 +15985,7 @@
 	patches.drivers/mlx5-0057-IB-mlx5-Add-support-for-resize-CQ.patch
 	patches.drivers/mlx5-0058-mlx5_core-Improve-debugfs-readability.patch
 	patches.drivers/mlx5-0059-mlx5_core-Fix-PowerPC-support.patch
+	patches.drivers/mlx5-0060-IB-mlx5-Allow-creation-of-QPs-with-zero-length-work-.patch
 
 	########################################################
 	# Wireless Networking
