net/mlx5_core: Support MANAGE_PAGES and QUERY_PAGES firmware command changes (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15941,6 +15941,7 @@
 	patches.drivers/mlx5-0013-IB-mlx5-Fix-stack-info-leak-in-mlx5_ib_alloc_ucontex.patch
 	patches.drivers/mlx5-0014-mlx5_core-Implement-new-initialization-sequence.patch
 	patches.drivers/mlx5-0015-mlx5-remove-health-handler-plugin.patch
+	patches.drivers/mlx5-0016-net-mlx5_core-Support-MANAGE_PAGES-and-QUERY_PAGES-f.patch
 
 	########################################################
 	# Wireless Networking
