IB/mlx5: Use ARRAY_SIZE instead of sizeof/sizeof[0] (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16024,6 +16024,7 @@
 	patches.drivers/mlx5-0096-mlx5-Move-pci-device-handling-from-mlx5_ib-to-mlx5_c.patch
 	patches.drivers/mlx5-0097-mlx5-minor-fixes-mainly-avoidance-of-hidden-casts.patch
 	patches.drivers/mlx5-0098-mlx5-Adjust-events-to-use-unsigned-long-param-instea.patch
+	patches.drivers/mlx5-0099-IB-mlx5-Use-ARRAY_SIZE-instead-of-sizeof-sizeof-0.patch
 
 	########################################################
 	# Wireless Networking
