IB/mlx5: Abort driver cleanup if teardown hca fails (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15986,6 +15986,7 @@
 	patches.drivers/mlx5-0058-mlx5_core-Improve-debugfs-readability.patch
 	patches.drivers/mlx5-0059-mlx5_core-Fix-PowerPC-support.patch
 	patches.drivers/mlx5-0060-IB-mlx5-Allow-creation-of-QPs-with-zero-length-work-.patch
+	patches.drivers/mlx5-0061-IB-mlx5-Abort-driver-cleanup-if-teardown-hca-fails.patch
 
 	########################################################
 	# Wireless Networking
