--- a/series.conf
+++ b/series.conf
@@ -15958,6 +15958,7 @@
 	patches.drivers/mlx5-0030-IB-mlx5-Fix-eq-names-to-display-nicely-in-proc-inter.patch
 	patches.drivers/mlx5-0031-IB-mlx5-Fix-alignment-of-reg-umr-gather-buffers.patch
 	patches.drivers/mlx5-0032-IB-mlx5-Ensure-proper-synchronization-accessing-memo.patch
+	patches.drivers/mlx5-0033-IB-mlx5-Fix-check-of-number-of-entries-in-create-CQ.patch
 
 	########################################################
 	# Wireless Networking
