mlx5: Fix sparse warnings (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16047,6 +16047,7 @@
 	patches.drivers/mlx5-0119-net-mlx5_core-Print-resource-number-on-QP-SRQ-async-.patch
 	patches.drivers/mlx5-0120-net-mlx5_core-Clear-outbox-of-dealloc-uar.patch
 	patches.drivers/mlx5-0121-net-mlx5_core-Add-more-supported-devices.patch
+	patches.drivers/mlx5-0122-mlx5-Fix-sparse-warnings.patch
 
 	########################################################
 	# Wireless Networking
