IB/mlx5: Fix warning about cast of wr_id back to pointer on 32 bits (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16018,6 +16018,7 @@
 	patches.drivers/mlx5-0090-IB-mlx5-Refactor-UMR-to-have-its-own-context-struct.patch
 	patches.drivers/mlx5-0091-IB-mlx5-add-missing-padding-at-end-of-struct-mlx5_ib.patch
 	patches.drivers/mlx5-0092-IB-mlx5-add-missing-padding-at-end-of-struct-mlx5_ib.patch
+	patches.drivers/mlx5-0093-IB-mlx5-Fix-warning-about-cast-of-wr_id-back-to-poin.patch
 
 	########################################################
 	# Wireless Networking
