--- a/series.conf
+++ b/series.conf
@@ -16013,6 +16013,7 @@
 	patches.drivers/mlx5-0085-mlx5_core-Copy-DIF-fields-only-when-input-and-output.patch
 	patches.drivers/mlx5-0086-IB-mlx5-Fix-error-handling-in-reg_umr.patch
 	patches.drivers/mlx5-0087-IB-mlx5-Add-MR-to-radix-tree-in-reg_mr_callback.patch
+	patches.drivers/mlx5-0088-mlx5_core-Store-MR-attributes-in-mlx5_mr_core-during.patch
 
 	########################################################
 	# Wireless Networking
