IB/core: Introduce signature verbs API (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15997,6 +15997,7 @@
 	patches.drivers/mlx5-0069-mlx5-Use-pci_enable_msix_range-instead-of-pci_enable.patch
 	patches.drivers/mlx5-0070-net-IB-mlx-Bump-all-Mellanox-driver-versions.patch
 	patches.drivers/mlx5-0071-IB-core-Introduce-protected-memory-regions.patch
+	patches.drivers/mlx5-0072-IB-core-Introduce-signature-verbs-API.patch
 
 	########################################################
 	# Wireless Networking
