mlx5: use after free in mlx5_cmd_comp_handler() (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15935,6 +15935,7 @@
 	patches.drivers/mlx5-0007-mlx5_core-Adjust-hca_cap.uar_page_sz-to-conform-to-C.patch
 	patches.drivers/mlx5-0008-mlx5-Return-EFAULT-instead-of-EPERM.patch
 	patches.drivers/mlx5-0009-mlx5-core-Fix-__udivdi3-when-compiling-for-32-bit-ar.patch
+	patches.drivers/mlx5-0010-mlx5-use-after-free-in-mlx5_cmd_comp_handler.patch
 
 	########################################################
 	# Wireless Networking
