--- a/series.conf
+++ b/series.conf
@@ -15988,6 +15988,7 @@
 	patches.drivers/mlx5-0060-IB-mlx5-Allow-creation-of-QPs-with-zero-length-work-.patch
 	patches.drivers/mlx5-0061-IB-mlx5-Abort-driver-cleanup-if-teardown-hca-fails.patch
 	patches.drivers/mlx5-0062-IB-mlx5-Remove-old-field-for-create-mkey-mailbox.patch
+	patches.drivers/mlx5-0063-IB-mlx5-Verify-reserved-fields-are-cleared.patch
 
 	########################################################
 	# Wireless Networking
