--- a/series.conf
+++ b/series.conf
@@ -16010,6 +16010,7 @@
 	patches.drivers/mlx5-0082-IB-mlx5-Add-block-multicast-loopback-support.patch
 	patches.drivers/mlx5-0083-mlx5_core-Fix-signature-handover-operation-for-inter.patch
 	patches.drivers/mlx5-0084-mlx5_core-Simplify-signature-handover-wqe-for-interl.patch
+	patches.drivers/mlx5-0085-mlx5_core-Copy-DIF-fields-only-when-input-and-output.patch
 
 	########################################################
 	# Wireless Networking
