mlx5: remove health handler plugin (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15940,6 +15940,7 @@
 	patches.drivers/mlx5-0012-IB-mlx5-Fix-error-return-code-in-init_one.patch
 	patches.drivers/mlx5-0013-IB-mlx5-Fix-stack-info-leak-in-mlx5_ib_alloc_ucontex.patch
 	patches.drivers/mlx5-0014-mlx5_core-Implement-new-initialization-sequence.patch
+	patches.drivers/mlx5-0015-mlx5-remove-health-handler-plugin.patch
 
 	########################################################
 	# Wireless Networking
