IB/mlx5: Add block multicast loopback support (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16007,6 +16007,7 @@
 	patches.drivers/mlx5-0079-IB-mlx5-Collect-signature-error-completion.patch
 	patches.drivers/mlx5-0080-IB-mlx5-Expose-support-for-signature-MR-feature.patch
 	patches.drivers/mlx5-0081-IB-mlx5_core-remove-unreachable-function-call-in-mod.patch
+	patches.drivers/mlx5-0082-IB-mlx5-Add-block-multicast-loopback-support.patch
 
 	########################################################
 	# Wireless Networking
