IB/core: Add reserved values to enums for low-level driver use (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15926,6 +15926,8 @@
 	patches.drivers/i40evf-0143-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
 	patches.drivers/i40evf-0144-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 
+	patches.drivers/mlx5-0001-IB-core-Add-reserved-values-to-enums-for-low-level-d.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
