--- a/series.conf
+++ b/series.conf
@@ -15990,6 +15990,7 @@
 	patches.drivers/mlx5-0062-IB-mlx5-Remove-old-field-for-create-mkey-mailbox.patch
 	patches.drivers/mlx5-0063-IB-mlx5-Verify-reserved-fields-are-cleared.patch
 	patches.drivers/mlx5-0064-IB-mlx5-Fix-RC-transport-send-queue-overhead-computa.patch
+	patches.drivers/mlx5-0065-IB-mlx5-Fix-binary-compatibility-with-libmlx5.patch
 
 	########################################################
 	# Wireless Networking
