--- a/supported.conf
+++ b/supported.conf
@@ -535,6 +535,7 @@
 		drivers/infiniband/hw/ehca/ib_ehca
 		drivers/infiniband/hw/ipath/ib_ipath
 		drivers/infiniband/hw/mlx4/mlx4_ib
+		drivers/infiniband/hw/mlx5/mlx5_ib
 		drivers/infiniband/hw/mthca/ib_mthca
 		drivers/infiniband/hw/nes/iw_nes
 		drivers/infiniband/hw/qib/ib_qib
@@ -1023,6 +1024,7 @@
 		drivers/net/ethernet/intel/ixgbevf/ixgbevf
 		drivers/net/ethernet/mellanox/mlx4/mlx4_core
 		drivers/net/ethernet/mellanox/mlx4/mlx4_en
+		drivers/net/ethernet/mellanox/mlx5/mlx5_core
 		drivers/net/ethernet/qlogic/netxen/netxen_nic
 		drivers/net/ethernet/qlogic/qla3xxx
 		drivers/net/ethernet/qlogic/qlcnic/qlcnic
