--- a/series.conf
+++ b/series.conf
@@ -6366,6 +6366,7 @@
 	patches.drivers/qla2xxx-0495-remove-redundant-declaration-in-qla_gbl.h.patch
 	patches.drivers/qla2xxx-0496-fix-race-in-handling-rport-deletion-during-r.patch
 	patches.drivers/qla2xxx-0497-fix-busy-wait-regression.patch
+	patches.drivers/qla2xxx-Do-not-crash-system-for-sp-ref-count-zero.patch
 
 	patches.drivers/sd_dif-problem-with-verify-of-type-1-protection-information
 
