Add MODULE_ALIAS for autoloading ipmi driver on ACPI systems (FATE#317646).

--- a/series.conf
+++ b/series.conf
@@ -18261,6 +18261,7 @@
 	patches.fixes/ipmi-fix-KCS-timeout-values.patch
 	patches.fixes/ipmi-fix-a-race-restarting-the-timer.patch
 	patches.fixes/ipmi-reset-the-KCS-timeout-when-starting-error-recovery.patch
+	patches.drivers/Add-MODULE_ALIAS-for-autoloading-ipmi-driver-on-ACPI.patch
 
 	patches.fixes/watchdog-iTCO_wdt-preserve-SMI-on-new-hardware.patch
 
