--- a/series.conf
+++ b/series.conf
@@ -5597,6 +5597,8 @@
 	patches.drivers/megaraid_sas-0104-driver-version-update.patch
 	patches.drivers/megaraid_sas-Disable-controller-reset-for-ppc.patch
 	patches.drivers/megaraid_sas-Disable-fastpath-writes-for-non-RAID0.patch
+	patches.drivers/megaraid_sas-Add-back-driver-information.patch
+
 	patches.fixes/scsi-ses-crash-on-lun0
 	patches.suse/scsi-error-test-unit-ready-timeout
 	patches.fixes/scsi-scan-blist-update
