powerpc: Make chip-id information available to userspace (bsc#919682).

--- a/series.conf
+++ b/series.conf
@@ -830,6 +830,9 @@
 	patches.arch/ppc-spinlock-03-Implement-arch_spin_is_locked-using-arch_spin_value_unlocked
 	patches.arch/ppc-spinlock-04-Add-smp_mb-to-arch_spin_is_locked
 
+	#bsc#919682
+	patches.arch/powerpc-Make-chip-id-information-available-to-usersp.patch
+
 	########################################################
 	# S/390
 	########################################################
