powerpc: Make chip-id information available to userspace (bsc#919682).

--- a/series.conf
+++ b/series.conf
@@ -896,6 +896,9 @@
 	patches.arch/ppc-fix-audit-crash-due-to-PPR-save_restore
 	patches.arch/powerpc-fix-fatal-SLB-miss-when-restoring-PPR
 
+	#bsc#919682
+	patches.arch/powerpc-Make-chip-id-information-available-to-usersp.patch
+
 	########################################################
 	# S/390
 	########################################################
