--- a/series.conf
+++ b/series.conf
@@ -16368,6 +16368,7 @@
 	patches.drivers/cxgb4-0057-RDMA-cxgb4-Fix-accounting-for-unsignaled-SQ-WRs-to-d.patch
 	patches.drivers/cxgb4-0058-RDMA-cxgb4-Set-arp-error-handler-for-PASS_ACCEPT_RPL.patch
 	patches.drivers/cxgb4-0059-RDMA-cxgb4-Always-do-GTS-write-if-cidx_inc-CIDXINC_M.patch
+	patches.drivers/cxgb4-0060-RDMA-cxgb4-Advertise-0ULL-as-max-MR-size.patch
 
 	########################################################
 	# Wireless Networking
