--- a/series.conf
+++ b/series.conf
@@ -16516,6 +16516,7 @@
 	patches.drivers/cxgb4-0205-cxgb4-Use-BAR2-Going-To-Sleep-GTS-for-T5-and-later.patch
 	patches.drivers/cxgb4-0206-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
 	patches.drivers/cxgb4-0207-cxgb4-Add-support-for-adaptive-rx.patch
+	patches.drivers/cxgb4-0208-cxgb4-potential-shift-wrapping-bug.patch
 
 	########################################################
 	# Wireless Networking
