RDMA/cxgb4: Use correct bit shift macros for vlan filter tuples (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16362,6 +16362,7 @@
 	patches.drivers/cxgb4-0051-RDMA-cxgb4-Fix-stack-info-leak-in-c4iw_create_qp.patch
 	patches.drivers/cxgb4-0052-cxgb4-Add-routines-to-create-and-remove-listening-IP.patch
 	patches.drivers/cxgb4-0053-cxgb4-Add-CLIP-support-to-store-compressed-IPv6-addr.patch
+	patches.drivers/cxgb4-0054-RDMA-cxgb4-Use-correct-bit-shift-macros-for-vlan-fil.patch
 
 	########################################################
 	# Wireless Networking
