RDMA/cxgb4: Don't reconnect on abort for mpa_rev 1 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16327,6 +16327,7 @@
 	patches.drivers/cxgb4-0016-RDMA-cxgb4-Always-log-async-errors.patch
 	patches.drivers/cxgb4-0017-RDMA-cxgb4-Only-log-rx_data-warnings-if-cpl-status-i.patch
 	patches.drivers/cxgb4-0018-RDMA-cxgb4-Fix-endpoint-timeout-race-condition.patch
+	patches.drivers/cxgb4-0019-RDMA-cxgb4-Don-t-reconnect-on-abort-for-mpa_rev-1.patch
 
 	########################################################
 	# Wireless Networking
