--- a/series.conf
+++ b/series.conf
@@ -16443,6 +16443,7 @@
 	patches.drivers/cxgb4-0132-RDMA-cxgb4-Use-pr_warn_ratelimited.patch
 	patches.drivers/cxgb4-0133-RDMA-cxgb4-Initialize-reserved-fields-in-a-FW-work-r.patch
 	patches.drivers/cxgb4-0134-RDMA-cxgb4-Add-missing-debug-stats.patch
+	patches.drivers/cxgb4-0135-RDMA-cxgb4-Use-uninitialized_var.patch
 
 	########################################################
 	# Wireless Networking
