--- a/series.conf
+++ b/series.conf
@@ -16325,6 +16325,7 @@
 	patches.drivers/cxgb4-0014-RDMA-cxgb4-Display-streaming-mode-error-only-if-dete.patch
 	patches.drivers/cxgb4-0015-RDMA-cxgb4-Keep-QP-referenced-until-TID-released.patch
 	patches.drivers/cxgb4-0016-RDMA-cxgb4-Always-log-async-errors.patch
+	patches.drivers/cxgb4-0017-RDMA-cxgb4-Only-log-rx_data-warnings-if-cpl-status-i.patch
 
 	########################################################
 	# Wireless Networking
