--- a/series.conf
+++ b/series.conf
@@ -16380,6 +16380,7 @@
 	patches.drivers/cxgb4-0069-cxgb4-Add-new-scheme-to-update-T4-T5-firmware.patch
 	patches.drivers/cxgb4-0070-RDMA-cxgb4-Make-_c4iw_write_mem_dma-static.patch
 	patches.drivers/cxgb4-0071-net-cxgb4-calls-skb_set_hash.patch
+	patches.drivers/cxgb4-0072-cxgb4-Reserve-stid-0-for-T4-T5-adapters.patch
 
 	########################################################
 	# Wireless Networking
