--- a/series.conf
+++ b/series.conf
@@ -16317,6 +16317,7 @@
 	patches.drivers/cxgb4-0006-cxgb4-Add-LE-hash-collision-bug-fix-path-in-LLD-driv.patch
 	patches.drivers/cxgb4-0007-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-active-open.patch
 	patches.drivers/cxgb4-0008-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-passive-ope.patch
+	patches.drivers/cxgb4-0009-RDMA-cxgb4-Fix-bug-for-active-and-passive-LE-hash-co.patch
 
 	########################################################
 	# Wireless Networking
