cxgb4/cxgb4vf: Add device ID for new adapter and remove for dbg adapter (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16511,6 +16511,7 @@
 	patches.drivers/cxgb4-0200-cxgb4-Add-support-to-S25FL032P-flash.patch
 	patches.drivers/cxgb4-0201-cxgb4-Fix-t4_flash_erase_sectors-to-throw-an-error-w.patch
 	patches.drivers/cxgb4-0202-cxgb4-Add-warning-msg-when-attaching-to-adapters-whi.patch
+	patches.drivers/cxgb4-0203-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
 
 	########################################################
 	# Wireless Networking
