cxgb4/iw_cxgb4: Move common defines to cxgb4 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16481,6 +16481,7 @@
 	patches.drivers/cxgb4-0170-cxgb4-iw_cxgb4-use-firmware-ord-ird-resource-limits.patch
 	patches.drivers/cxgb4-0171-cxgb4-iw_cxgb4-display-TPTE-on-errors.patch
 	patches.drivers/cxgb4-0172-cxgb4-iw_cxgb4-work-request-logging-feature.patch
+	patches.drivers/cxgb4-0173-cxgb4-iw_cxgb4-Move-common-defines-to-cxgb4.patch
 
 	########################################################
 	# Wireless Networking
