RDMA/cxgb4: Fix LE hash collision bug for passive open connection (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16316,6 +16316,7 @@
 	patches.drivers/cxgb4-0005-cxgb4-Add-T4-filter-support.patch
 	patches.drivers/cxgb4-0006-cxgb4-Add-LE-hash-collision-bug-fix-path-in-LLD-driv.patch
 	patches.drivers/cxgb4-0007-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-active-open.patch
+	patches.drivers/cxgb4-0008-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-passive-ope.patch
 
 	########################################################
 	# Wireless Networking
