cxgb4: Change default Interrupt Holdoff Packet Count Threshold (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16459,6 +16459,7 @@
 	patches.drivers/cxgb4-0148-RDMA-cxgb4-Add-missing-padding-at-end-of-struct-c4iw.patch
 	patches.drivers/cxgb4-0149-RDMA-cxgb4-add-missing-padding-at-end-of-struct-c4iw.patch
 	patches.drivers/cxgb4-0150-iw_cxgb4-Allocate-and-use-IQs-specifically-for-indir.patch
+	patches.drivers/cxgb4-0151-cxgb4-Change-default-Interrupt-Holdoff-Packet-Count-.patch
 
 	########################################################
 	# Wireless Networking
