cxgb4/cxgb4vf: For T5 use Packing and Padding Boundaries for SGE DMA transfers (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16527,6 +16527,7 @@
 	patches.drivers/cxgb4-0216-cxgb4-Improve-handling-of-DCB-negotiation-or-loss-th.patch
 	patches.drivers/cxgb4-0217-cxgb4-Handle-dcb-enable-correctly.patch
 	patches.drivers/cxgb4-0218-cxgb4-Fix-missing-initialization-of-win0_lock.patch
+	patches.drivers/cxgb4-0219-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
 
 	########################################################
 	# Wireless Networking
