cxgb4: Add T5 debugfs support (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16340,6 +16340,7 @@
 	patches.drivers/cxgb4-0029-cxgb4-Dump-T5-registers.patch
 	patches.drivers/cxgb4-0030-cxgb4-Add-T5-write-combining-support.patch
 	patches.drivers/cxgb4-0031-cxgb4-Enable-doorbell-drop-recovery-only-for-T4-adap.patch
+	patches.drivers/cxgb4-0032-cxgb4-Add-T5-debugfs-support.patch
 
 	########################################################
 	# Wireless Networking
