--- a/series.conf
+++ b/series.conf
@@ -16412,6 +16412,7 @@
 	patches.drivers/cxgb4-0101-cxgb4-Rectify-emitting-messages-about-SGE-Ingress-DM.patch
 	patches.drivers/cxgb4-0102-cxgb4-Updates-for-T5-SGE-s-Egress-Congestion-Thresho.patch
 	patches.drivers/cxgb4-0103-cxgb4-Calculate-len-properly-for-LSO-path.patch
+	patches.drivers/cxgb4-0104-cxgb4-iw_cxgb4-Treat-CPL_ERR_KEEPALV_NEG_ADVICE-as-n.patch
 
 	########################################################
 	# Wireless Networking
