cxgb4: Fix pci_device_id structure initialization with correct PF number (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16353,6 +16353,7 @@
 	patches.drivers/cxgb4-0042-RDMA-cxgb4-Fix-onchip-queue-support-for-T5.patch
 	patches.drivers/cxgb4-0043-Fix-dst_neigh_lookup-dst_neigh_lookup_skb-return-val.patch
 	patches.drivers/cxgb4-0044-RDMA-cxgb4-Fix-error-return-code-in-create_qp.patch
+	patches.drivers/cxgb4-0045-cxgb4-Fix-pci_device_id-structure-initialization-wit.patch
 
 	########################################################
 	# Wireless Networking
