--- a/series.conf
+++ b/series.conf
@@ -16434,6 +16434,7 @@
 	patches.drivers/cxgb4-0123-RDMA-cxgb4-Lock-around-accept-reject-downcalls.patch
 	patches.drivers/cxgb4-0124-RDMA-cxgb4-Drop-RX_DATA-packets-if-the-endpoint-is-g.patch
 	patches.drivers/cxgb4-0125-RDMA-cxgb4-rx_data-needs-to-hold-the-ep-mutex.patch
+	patches.drivers/cxgb4-0126-RDMA-cxgb4-Disable-DSGL-use-by-default.patch
 
 	########################################################
 	# Wireless Networking
