cxgb4 : Disable recursive mailbox commands when enabling vi (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16493,6 +16493,7 @@
 	patches.drivers/cxgb4-0182-cxgb4-Fixed-incorrect-check-for-memory-operation-in-.patch
 	patches.drivers/cxgb4-0183-RDMA-cxgb4-Only-call-CQ-completion-handler-if-it-is-.patch
 	patches.drivers/cxgb4-0184-cxgb4-only-free-allocated-fls.patch
+	patches.drivers/cxgb4-0185-cxgb4-Disable-recursive-mailbox-commands-when-enabli.patch
 
 	########################################################
 	# Wireless Networking
