--- a/series.conf
+++ b/series.conf
@@ -16498,6 +16498,7 @@
 	patches.drivers/cxgb4-0187-cxgb4-Update-FW-version-string-to-match-FW-binary-ve.patch
 	patches.drivers/cxgb4-0188-cxgb4-IEEE-fixes-for-DCBx-state-machine.patch
 	patches.drivers/cxgb4-0189-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/cxgb4-0190-cxgb4-Fix-race-condition-in-cleanup.patch
 
 	########################################################
 	# Wireless Networking
