RDMA/cxgb4: Add missing debug stats (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16442,6 +16442,7 @@
 	patches.drivers/cxgb4-0131-RDMA-cxgb4-Max-fastreg-depth-depends-on-DSGL-support.patch
 	patches.drivers/cxgb4-0132-RDMA-cxgb4-Use-pr_warn_ratelimited.patch
 	patches.drivers/cxgb4-0133-RDMA-cxgb4-Initialize-reserved-fields-in-a-FW-work-r.patch
+	patches.drivers/cxgb4-0134-RDMA-cxgb4-Add-missing-debug-stats.patch
 
 	########################################################
 	# Wireless Networking
