--- a/series.conf
+++ b/series.conf
@@ -16432,6 +16432,7 @@
 	patches.drivers/cxgb4-0121-RDMA-cxgb4-set-error-code-on-kmalloc-failure.patch
 	patches.drivers/cxgb4-0122-cxgb4-Adds-device-ID-for-few-more-Chelsio-Adapters.patch
 	patches.drivers/cxgb4-0123-RDMA-cxgb4-Lock-around-accept-reject-downcalls.patch
+	patches.drivers/cxgb4-0124-RDMA-cxgb4-Drop-RX_DATA-packets-if-the-endpoint-is-g.patch
 
 	########################################################
 	# Wireless Networking
